Rules and Regulations Activity added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="k_exp">Kalinga was an early republic in central East India that comprised almost whole Odisha and also some parts of Andhra Pradesh and Chattisgarh. It was a rich and fertile land that extended from the Damodar River/Ganges to the Godavari River and from Bay of Bengal to the Amarkantak range in the west. The region was scene of the bloody Kalinga War fought by Ashoka of the Maurya Empire approximately 265 BCE. The Kalingas occupied the extensive territory stretching from river Vaitarani in Odisha to the Varahanandi in the Visakhapatnam district. Its capital in the ancient times was the city of Dantakura or Dantapura (now Dantavaktra fort near Chicacole in the Ganjam district, washed by the river Languliya or Langulini). The core area of the historical Kalinga now forms the sea shore of Orissa and Andhra region of Andhra Pradesh, up to river Godavari state in India.</string>
     <string name="title_activity_about_dev">about_dev</string>
     <string name="title_activity_teams_info">teams_info</string>
+    <string name="title_activity_t_shirt">T-Shirt</string>
+    <string name="title_activity_rules">Rules And Regulations</string>
 
 </resources>
